--- a/index.html
+++ b/index.html
@@ -10,6 +10,18 @@
      crossorigin="anonymous"></script>
   </head>
   <body>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5458368661860067"
+     crossorigin="anonymous"></script>
+<!-- Adtxm -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-5458368661860067"
+     data-ad-slot="3048796866"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
