--- a/index.html
+++ b/index.html
@@ -10,7 +10,17 @@
      crossorigin="anonymous"></script>
   </head>
   <body>
-    
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5458368661860067"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-gl+8-k-t+3t"
+     data-ad-client="ca-pub-5458368661860067"
+     data-ad-slot="4669365257"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
     
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
